apps/entity-conformity-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anoti-conformity-frontend
spec:
  selector:
    matchLabels:
      app: anoti-conformity-frontend
  template:
    metadata:
      labels:
        app: anoti-conformity-frontend
    spec:
      containers:
      - name: anoti-conformity-frontend
        image: 250956544061.dkr.ecr.eu-west-3.amazonaws.com/anoti-conformity-frontend:1.0.2
        imagePullPolicy: Always
        tty: true
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 3
          timeoutSeconds: 5
          periodSeconds: 15
        ports:
        - name: http
          protocol: TCP
          containerPort: 8080
        resources:
          requests:
            memory: "1024Mi"
            cpu: "0.5"
          limits:
            memory: "2048Mi"
            cpu: "0.9"
      nodeSelector:
        "node.kubernetes.io/instance-type": "t3.medium"
