apps/entity-conformity-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anoti-conformity-frontend-clusterip
spec:
  selector:
    app: anoti-conformity-frontend
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  type: ClusterIP
